<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppFirebaseAuth</string>
    <string name="signIn">Sign In</string>
    <string name="userName">Username</string>
    <string name="textPassword">Password</string>
    <string name="ButtonLogin">Login</string>
    <string name="textForgetPassword">Did you forget your password ?</string>
    <string name="TextSignup">Sign up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="messageError">Is required</string>
    <string name="titleAlert">Alert</string>
    <string name="messageErrorLogin">failed, wrong password or email</string>
    <string name="AcceptError">Accept</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Feminine</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="to_do">To Do</string>
    <string name="Search">search</string>
    <string name="searchTitle">search</string>
    <string name="Filter_pending">Pending</string>
    <string name="Filter_completed">Completed</string>

</resources>