<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoFirebase"
        android:layout_width="149dp"
        android:layout_height="104dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/frbase"
        />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoFirebase"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/userName"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputUserName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/textPassword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/ButtonForgetPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPass"
        android:layout_alignLeft="@id/inputPass"
        android:text="@string/textForgetPassword"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ButtonForgetPassword"
        android:layout_margin="15dp"
        android:text="@string/ButtonLogin"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/ButtonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ButtonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/TextSignup"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

</RelativeLayout>